[metadata]
name = examplepackage
version = 1.0.1
author = Giorgos Myrianthous
description = This is an example project
long_description = This is a longer description for the project
url = https://medium.com/@gmyrianthous
keywords = sample, example, setuptools

[options]
python_requires = >=3.7, <4
install_requires = 
    pandas
[options.extras_require]
test = 
    pytest
    coverage
[options.package_data]
sample = 
    example_data.csv'
